feat(manage-billing-view): add command to open the edit package custom dialog

--- a/Views/ManageBillingView.axaml
+++ b/Views/ManageBillingView.axaml
@@ -442,7 +442,8 @@
                                                                                 Classes="Primary"
                                                                                 HorizontalAlignment="Center"
                                                                                 Padding="65,0"
-                                                                                Margin="0,25,0,0">
+                                                                                Margin="0,25,0,0"
+                                                                                Command="{CompiledBinding OpenEditPackageCommand}">
                                                                                 <StackPanel Orientation="Horizontal">
                                                                                     <Svg
                                                                                         Width="20"
