refactor(components): change text from create to edit

--- a/Components/EditPackageDialog/EditPackageDialogCard.axaml
+++ b/Components/EditPackageDialog/EditPackageDialogCard.axaml
@@ -246,7 +246,7 @@
                         Classes="Primary"
                         Command="{CompiledBinding SavePackageCommand}">
                         <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="Create Package" />
+                            <TextBlock Text="Edit Package" />
                         </StackPanel>
                     </Button>
                 </StackPanel>
