feat(main-window): add command to execute equipment inventory page

--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -191,7 +191,7 @@
                         AsSeparator="True"
                         Text="Manage Inventory" FontSize="15" Foreground="{DynamicResource DestructiveColor}"/>
 					<shadui:SidebarItem
-						Command="{CompiledBinding}"
+						Command="{CompiledBinding OpenEquipmentInventoryCommand}"
 						Content="Equipment Inventory"
 						FontSize="15"
 						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Equipment Inventory'}">
