feat(main-window): implement the switch page for item-stock view

--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -205,8 +205,8 @@
 						</shadui:SidebarItem.Icon>
 					</shadui:SidebarItem>
 					<shadui:SidebarItem
-						Command="{CompiledBinding}"
-						Content="Product/Supplement Stock"
+						Command="{CompiledBinding OpenItemStockViewModelCommand}"
+						Content="Item Stock"
 						FontSize="15"
 						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Product/Supplement Stock'}">
 						<shadui:SidebarItem.Icon>
