--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -219,7 +219,7 @@
 						</shadui:SidebarItem.Icon>
 					</shadui:SidebarItem>
 					<shadui:SidebarItem
-						Command="{CompiledBinding}"
+						Command="{CompiledBinding OpenSupplierManagementCommand}"
 						Content="Supplier Management"
 						FontSize="15"
 						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Supplier Management'}">
