--- a/Views/SupplierManagementView.axaml
+++ b/Views/SupplierManagementView.axaml
@@ -9,11 +9,11 @@
     x:DataType="viewModels:SupplierManagementViewModel"
     mc:Ignorable="d" d:DesignWidth="1683" d:DesignHeight="1080"
     x:Class="AHON_TRACK.Views.SupplierManagementView">
-    
+
     <Design.DataContext>
-        <viewModels:SupplierManagementViewModel/>
+        <viewModels:SupplierManagementViewModel />
     </Design.DataContext>
-    
+
     <UserControl.Resources>
         <SolidColorBrush x:Key="MutedColor" Color="#2C2F36" Opacity="0.70" />
         <SolidColorBrush x:Key="FontForeground" Color="#2C2F36" />
@@ -32,13 +32,13 @@
         <converters:IntToInverseBoolConverter x:Key="IntToInverseBoolConverter" />
         <converters:DateToStringConverter x:Key="DateToStringConverter" />
     </UserControl.Resources>
-    
+
     <UserControl.Styles>
         <Style Selector="TextBlock">
-            <Setter Property="Foreground" Value="{DynamicResource FontForeground}"/>
+            <Setter Property="Foreground" Value="{DynamicResource FontForeground}" />
         </Style>
     </UserControl.Styles>
-    
+
     <DockPanel LastChildFill="True">
         <StackPanel
             MaxWidth="{StaticResource PageMaxWidth}"
@@ -60,6 +60,146 @@
         </StackPanel>
         <ScrollViewer HorizontalScrollBarVisibility="Auto">
             <StackPanel MaxWidth="{StaticResource PageMaxWidth}" Margin="90,40,90,24" Spacing="16">
+                <shadui:Card MinWidth="300" MaxWidth="1400">
+                    <StackPanel>
+                        <Grid ColumnDefinitions="Auto Auto Auto *">
+                            <TextBox
+                                Grid.Column="0"
+                                HorizontalAlignment="Left"
+                                Watermark="Search Suppliers..."
+                                shadui:ControlAssist.ShowProgress="{CompiledBinding }"
+                                Text=""
+                                shadui:ControlAssist.Height="40"
+                                Classes="Clearable"
+                                Width="400">
+                                <TextBox.InnerRightContent>
+                                    <Svg
+                                        Width="20"
+                                        Opacity="0.75"
+                                        Path="avares://AHON_TRACK/Assets/SupplierManagementView/search-icon.svg" />
+                                </TextBox.InnerRightContent>
+                            </TextBox>
+                            <ComboBox
+                                Grid.Column="1"
+                                Width="150"
+                                Margin="20,0,0,0"
+                                PlaceholderText="Filter"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Center">
+                            </ComboBox>
+                            <Button
+                                Grid.Column="2"
+                                Classes="Outline"
+                                Margin="20,0,0,0"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Center">
+                                <StackPanel Orientation="Horizontal">
+                                    <Svg
+                                        Width="20"
+                                        Height="20"
+                                        VerticalAlignment="Center"
+                                        Margin="0,0,8,0"
+                                        Path="avares://AHON_TRACK/Assets/SupplierManagementView/export-icon.svg" />
+                                    <TextBlock Text="Export" VerticalAlignment="Center" />
+                                </StackPanel>
+                            </Button>
+                            <Button
+                                Grid.Column="3"
+                                Classes="Primary"
+                                Margin="20,0,0,0"
+                                HorizontalAlignment="Right"
+                                VerticalAlignment="Center">
+                                <StackPanel Orientation="Horizontal">
+                                    <Svg
+                                        Width="20"
+                                        Height="20"
+                                        VerticalAlignment="Center"
+                                        Margin="0,0,8,0"
+                                        Path="avares://AHON_TRACK/Assets/SupplierManagementView/add-supplier-icon.svg" />
+                                    <TextBlock Text="Add Supplier" Foreground="White" VerticalAlignment="Center" />
+                                </StackPanel>
+                            </Button>
+                        </Grid>
+                        <DataGrid
+                            Height="650"
+                            Margin="0,20,0,0"
+                            CanUserReorderColumns="False"
+                            CanUserSortColumns="False"
+                            GridLinesVisibility="All"
+                            SelectionMode="Single"
+                            HeadersVisibility="Column"><!-- The Height property should be MaxHeight in the future -->
+
+                            <DataGrid.Columns>
+                                <DataGridCheckBoxColumn Binding="{CompiledBinding }" CanUserSort="False" Width="60">
+                                    <!--CheckBox Header Column-->
+                                    <DataGridCheckBoxColumn.Header>
+                                        <CheckBox
+                                            x:Name="SelectToggler"
+                                            Command="{CompiledBinding }"
+                                            CommandParameter="{CompiledBinding #SelectToggler.IsChecked}"
+                                            IsChecked="{CompiledBinding }"
+                                            Margin="8,0" />
+                                    </DataGridCheckBoxColumn.Header>
+                                </DataGridCheckBoxColumn>
+
+                                <!-- Supplier ID -->
+                                <DataGridTextColumn
+                                    Width="Auto"
+                                    MinWidth="80"
+                                    Header="Supplier ID"
+                                    Binding="{CompiledBinding }" />
+
+                                <!-- Supplier Name -->
+                                <DataGridTextColumn
+                                    Width="*"
+                                    Header="Supplier Name"
+                                    Binding="{CompiledBinding }" />
+
+                                <!-- Contact Person -->
+                                <DataGridTextColumn
+                                    Width="Auto"
+                                    MinWidth="200"
+                                    Header="Contact Person"
+                                    Binding="{CompiledBinding }" />
+
+                                <!-- Email -->
+                                <DataGridTextColumn
+                                    Width="Auto"
+                                    MinWidth="200"
+                                    Header="Email"
+                                    Binding="{CompiledBinding }" />
+
+                                <!-- Phone -->
+                                <DataGridTextColumn
+                                    Width="Auto"
+                                    MinWidth="180"
+                                    Header="Phone"
+                                    Binding="{CompiledBinding }" />
+
+                                <!-- Products -->
+                                <DataGridTextColumn
+                                    Width="Auto"
+                                    MinWidth="160"
+                                    Header="Products"
+                                    Binding="{CompiledBinding }" />
+
+                                <!-- Status -->
+                                <DataGridTextColumn
+                                    Width="Auto"
+                                    MinWidth="150"
+                                    Header="Status"
+                                    Binding="{CompiledBinding }" />
+
+                                <!-- Action -->
+                                <DataGridTextColumn
+                                    Width="Auto"
+                                    MinWidth="80"
+                                    Header="Action"
+                                    Binding="{CompiledBinding }" />
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </StackPanel>
+                </shadui:Card>
             </StackPanel>
         </ScrollViewer>
     </DockPanel>
