--- a/Views/ItemStockView.axaml
+++ b/Views/ItemStockView.axaml
@@ -1,4 +1,4 @@
-<UserControl 
+<UserControl
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,11 +9,11 @@
     x:DataType="viewModels:ItemStockViewModel"
     mc:Ignorable="d" d:DesignWidth="1683" d:DesignHeight="1080"
     x:Class="AHON_TRACK.Views.ItemStockView">
-    
+
     <Design.DataContext>
         <viewModels:ItemStockViewModel />
     </Design.DataContext>
-    
+
     <UserControl.Resources>
         <SolidColorBrush x:Key="MutedColor" Color="#2C2F36" Opacity="0.70" />
         <SolidColorBrush x:Key="FontForeground" Color="#2C2F36" />
@@ -32,13 +32,13 @@
         <converters:IntToInverseBoolConverter x:Key="IntToInverseBoolConverter" />
         <converters:DateToStringConverter x:Key="DateToStringConverter" />
     </UserControl.Resources>
-    
+
     <UserControl.Styles>
         <Style Selector="TextBlock">
-            <Setter Property="Foreground" Value="{DynamicResource FontForeground}"/>
+            <Setter Property="Foreground" Value="{DynamicResource FontForeground}" />
         </Style>
     </UserControl.Styles>
-    
+
     <DockPanel LastChildFill="True">
         <StackPanel
             MaxWidth="{StaticResource PageMaxWidth}"
@@ -54,12 +54,152 @@
                 Classes="Caption Muted"
                 FontSize="14"
                 FontFamily="Inter"
-                Text="Track inventory levels and manage restocking"
+                Text="Track item inventory levels and manage restocking"
                 TextWrapping="Wrap"
                 Margin="90,0" />
         </StackPanel>
         <ScrollViewer HorizontalScrollBarVisibility="Auto">
             <StackPanel MaxWidth="{StaticResource PageMaxWidth}" Margin="90,40,90,24" Spacing="16">
+                <shadui:Card MinWidth="300" MaxWidth="1400">
+                    <StackPanel>
+                        <Grid ColumnDefinitions="Auto Auto Auto *">
+                            <TextBox
+                                Grid.Column="0"
+                                HorizontalAlignment="Left"
+                                Watermark="Search Items..."
+                                shadui:ControlAssist.ShowProgress="{CompiledBinding }"
+                                Text=""
+                                shadui:ControlAssist.Height="40"
+                                Classes="Clearable"
+                                Width="400">
+                                <TextBox.InnerRightContent>
+                                    <Svg
+                                        Width="20"
+                                        Opacity="0.75"
+                                        Path="avares://AHON_TRACK/Assets/ItemStockView/search-icon.svg" />
+                                </TextBox.InnerRightContent>
+                            </TextBox>
+                            <ComboBox
+                                Grid.Column="1"
+                                Width="150"
+                                Margin="20,0,0,0"
+                                PlaceholderText="Filter"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Center">
+                            </ComboBox>
+                            <Button
+                                Grid.Column="2"
+                                Classes="Outline"
+                                Margin="20,0,0,0"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Center">
+                                <StackPanel Orientation="Horizontal">
+                                    <Svg
+                                        Width="20"
+                                        Height="20"
+                                        VerticalAlignment="Center"
+                                        Margin="0,0,8,0"
+                                        Path="avares://AHON_TRACK/Assets/ItemStockView/export-icon.svg" />
+                                    <TextBlock Text="Export" VerticalAlignment="Center" />
+                                </StackPanel>
+                            </Button>
+                            <Button
+                                Grid.Column="3"
+                                Classes="Primary"
+                                Margin="20,0,0,0"
+                                HorizontalAlignment="Right"
+                                VerticalAlignment="Center">
+                                <StackPanel Orientation="Horizontal">
+                                    <Svg
+                                        Width="20"
+                                        Height="20"
+                                        VerticalAlignment="Center"
+                                        Margin="0,0,8,0"
+                                        Path="avares://AHON_TRACK/Assets/ItemStockView/add-item-icon.svg" />
+                                    <TextBlock Text="Add Item" Foreground="White" VerticalAlignment="Center" />
+                                </StackPanel>
+                            </Button>
+                        </Grid>
+                        <DataGrid
+                            Height="650"
+                            Margin="0,20,0,0"
+                            CanUserReorderColumns="False"
+                            CanUserSortColumns="False"
+                            GridLinesVisibility="All"
+                            SelectionMode="Single"
+                            HeadersVisibility="Column"><!-- The Height property should be MaxHeight in the future -->
+
+                            <DataGrid.Columns>
+                                <DataGridCheckBoxColumn Binding="{CompiledBinding }" CanUserSort="False" Width="60">
+                                    <!--CheckBox Header Column-->
+                                    <DataGridCheckBoxColumn.Header>
+                                        <CheckBox
+                                            x:Name="SelectToggler"
+                                            Command="{CompiledBinding }"
+                                            CommandParameter="{CompiledBinding #SelectToggler.IsChecked}"
+                                            IsChecked="{CompiledBinding }"
+                                            Margin="8,0" />
+                                    </DataGridCheckBoxColumn.Header>
+                                </DataGridCheckBoxColumn>
+
+                                <!-- Item ID -->
+                                <DataGridTextColumn
+                                    Width="Auto"
+                                    MinWidth="80"
+                                    Header="Item ID"
+                                    Binding="{CompiledBinding }" />
+
+                                <!-- Item Name -->
+                                <DataGridTextColumn
+                                    Width="*"
+                                    Header="Item Name"
+                                    Binding="{CompiledBinding }" />
+
+                                <!-- Category -->
+                                <DataGridTextColumn
+                                    Width="Auto"
+                                    MinWidth="160"
+                                    Header="Category"
+                                    Binding="{CompiledBinding }" />
+
+                                <!-- Current Stock -->
+                                <DataGridTextColumn
+                                    Width="Auto"
+                                    MinWidth="160"
+                                    Header="Current Stock"
+                                    Binding="{CompiledBinding }" />
+
+                                <!-- Price -->
+                                <DataGridTextColumn
+                                    Width="Auto"
+                                    MinWidth="130"
+                                    Header="Price"
+                                    Binding="{CompiledBinding }" />
+
+                                <!-- Supplier -->
+                                <DataGridTextColumn
+                                    Width="Auto"
+                                    MinWidth="190"
+                                    Header="Supplier"
+                                    Binding="{CompiledBinding }" />
+
+                                <!-- Status -->
+                                <DataGridTextColumn
+                                    Width="Auto"
+                                    MinWidth="170"
+                                    Header="Status"
+                                    Binding="{CompiledBinding }" />
+
+                                <!-- Action -->
+                                <DataGridTextColumn
+                                    Width="Auto"
+                                    MinWidth="80"
+                                    Header="Action"
+                                    Binding="{CompiledBinding }" />
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </StackPanel>
+                </shadui:Card>
             </StackPanel>
         </ScrollViewer>
     </DockPanel>
