refactor(employee-dialog): make the age input read-only and remove button spinner

--- a/Components/AddNewEmployeeDialog/AddNewEmployeeDialogCard.axaml
+++ b/Components/AddNewEmployeeDialog/AddNewEmployeeDialogCard.axaml
@@ -166,9 +166,12 @@
 						<NumericUpDown
 							Value="{CompiledBinding EmployeeAge, Mode=TwoWay}"
 							shadui:ControlAssist.Label="Age"
+							ShowButtonSpinner="False"
 							FormatString="N0"
 							Watermark="Age"
 							Width="130"
+							IsReadOnly="True"
+							IsEnabled="False"
 							HorizontalAlignment="Left"/>
 					</StackPanel>
 
