feat(app): add Index style as part of the application style

--- a/App.axaml
+++ b/App.axaml
@@ -25,5 +25,6 @@
 
     <Application.Styles>
 		<shadui:ShadTheme/>
+		<StyleInclude Source="avares://AHON_TRACK/Styles/Index.axaml"/>
     </Application.Styles>
 </Application>
